# yep

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: yep-dockerhub.yml
doc/: design.md  hello-world.md  targets.md  type-hinting.md  vars-capture.md
doc/ideas/: gp.md  targets.md
doc/proposals/: README.md  fmt-sample.md
examples/dockerize-yep/: README.md  release_yep.py
examples/dockerize-yep/.yep/: project.toml
examples/hello-world/: README.md  hello.py
examples/hello-world/.yep/: project.toml
examples/hello-world/.yep/targets/local/: hello_world_wrapper.py
examples/word-count-java/: settings.gradle.kts
examples/word-count-java/app/: build.gradle.kts
examples/word-count-java/app/src/main/java/org/yep/: WordCount.java
examples/word-count-java/app/src/test/java/org/yep/: WordCountTest.java
examples/word-count-py/: README.md  declaration.txt  word_count.py
examples/word-count-py/.yep/: project.toml
examples/word-count-py/.yep/targets/local/: word_count_py_wrapper.py  wrapper.py
src/yep/: cli.py  project.py
src/yep/reflectors/: __init__.py  base.py  factory.py  pipeline.py  python_reflector.py
src/yep/targets/: base.py  factory.py  local.py
src/yep/targets/python/: github_actions.py  local.py
tests/test_cli/: test_reflectors.py  test_targets.py  test_yep_project.py
