[tool.poetry]
name = "yep"
version = "0.1.0"
description = "Yet another Engine for Pipelines"
authors = ["Yauhen Yakimovich <yauhen.yakimovich.mail@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/orbital-state/yep"
packages = [{include = "yep", from="src"}]

[tool.poetry.scripts]
yep = "yep.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
